fix(List View): More adaptive columns and collapsed sidebar

--- a/frappe/public/scss/desk/tags.scss
+++ b/frappe/public/scss/desk/tags.scss
@@ -5,7 +5,7 @@
 	padding: 3px 10px;
 	color: var(--text-muted);
 	height: 24px;
-	width: 60px;
+	max-width: 60px;
 	vertical-align: middle;
 }
 
